--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -48,13 +48,13 @@
                         <input required id="razaosocial" type="text" />
                     </div>
                     <div class="campo">
-                        <label for="nomefantasia">Nome fantasia</label>
+                        <label for="nomefantasia">CNPJ</label>
                         <input required id="nomefantasia" type="text" />
                     </div>
                 </div>
                 <div class="linha">
                     <div class="campo">
-                        <label for="cnpj">CNPJ</label>
+                        <label for="cnpj">Endereço</label>
                         <input required id="cnpj" type="text" />
                     </div>
 
@@ -72,7 +72,7 @@
                     <input required id="senha" type="password" />
                 </div>
                 <div class="formulario_acoes">
-                    <button id="submit_btn" class="btn_primario">Cadastre-se</button>
+                    <button id="submit_btn" class="btn_primario">Cadastrar</button>
                     <p>
                         Ao preencher o formulário a cima você concorda com todos os nossos Termos de Uso e nossa
                         Política de
