--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -36,13 +36,13 @@
                         <input required type="password" id="inputSenha" nome="senha" placeholder="Senha" />
                         <a href="#" class="recuperecao_senha">Esqueceu a senha?</a>
                     </div>
-                    <button class="btn_secundario" id="submit_login">Login</button>
+                    <button class="btn_secundario" id="submit_login">Entrar</button>
                 </div>
 
                 <div class="login_texto">
                     <div class="campo_texto">
                         <h1 class="login_h1">Seja bem-vindo!</h1>
-                        <h3 class="login_h3">Faça o seu cadastro e começe agora mesmo</h3>
+                        <h3 class="login_h3">Faça o seu cadastro e comece agora mesmo</h3>
                     </div>
                     <button class="btn_primario" onclick="window.location.href = './cadastro.html'">Cadastre-se</button>
                 </div>
