--- a/src/pages/produtos.html
+++ b/src/pages/produtos.html
@@ -75,7 +75,7 @@
         </div>
         <div>
             <h2 id="subtitulo">Entre em contato no link abaixo para escolher ou personalizar seu locker!</h2>
-            <a href="./login.html" class="btn_primario">Tenho interesse</a>
+            <a href="./cadastro.html" class="btn_primario">Tenho interesse</a>
         </div>
 
     </main>
