--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -21,7 +21,8 @@
             <a id="btn_login" href="./login.html" class="btn_secundario">Login</a>
             <select id="dropdown-menu">
                 <option value="sair">Nome</option>
-                <option value="admin">Editar perfil</option>
+                <option value="admin">Clientes</option>
+                <option value="admin">Produtos</option>
                 <option value="sair">Sair</option>
             </select>
 
