--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -34,6 +34,7 @@
     <main id="content">
         <div id="clientes" class="dashboard-container">
             <h1 class="titulo">Meus Clientes</h1>
+            <button id="new_client_btn" class="btn_primario">Cadastrar Novo Cliente</button>
             <div id="container_clientes">
             </div>
 
