--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,6 +21,7 @@
 
             <select id="dropdown-menu">
                 <option value="sair">Nome</option>
+                <option value="sair">Escolher plano</option>
                 <option value="admin">Editar perfil</option>
                 <option value="sair">Sair</option>
             </select>
