todos os labels/inputs com for e id

--- a/src/pages/editar-cadastro.html
+++ b/src/pages/editar-cadastro.html
@@ -39,41 +39,40 @@
         <form>
             <div class="formulario_linha">
                 <div class="campo">
-                    <label>Razão social</label>
-                    <input class="" />
+                    <label for="razaosocial">Razão Social</label>
+                    <input disabled type="text" id="razaosocial" />
                 </div>
                 <div class="campo">
-                    <label>Nome fantasia</label>
-                    <input class="" />
+                    <label for="cnpj">CNPJ</label>
+                    <input disabled id="cnpj" class="" />
+                </div>
+            </div>
+            <div class=" formulario_linha">
+                <div class="campo">
+                    <label for="endereco">Endereço</label>
+                    <input type="text" id="endereco" />
+                </div>
+                <div class="campo">
+                    <label for="telefone">Telefone</label>
+                    <input id="telefone" type="text" />
                 </div>
             </div>
             <div class="formulario_linha">
                 <div class="campo">
-                    <label>CNPJ</label>
-                    <input class="" />
-                </div>
-                <div class="campo">
-                    <label>Telefone</label>
-                    <input class="" />
+                    <label for="email">E-mail</label>
+                    <input id="email" type="email" />
                 </div>
             </div>
             <div class="formulario_linha">
                 <div class="campo">
-                    <label>E-mail</label>
-                    <input type="" class="" />
-                </div>
-            </div>
-            <div class="formulario_linha">
-                <div class="campo">
-                    <label>Senha</label>
-                    <input type="password" class="" />
+                    <label for="senha">Senha</label>
+                    <input id="senha" type="password" />
                 </div>
             </div>
             <div class="formulario_acoes">
                 <button class="btn_primario">Salvar</button>
                 <button class="btn_terciario">Cancelar plano</button>
                 <button class="btn_quartenario">Excluir conta</button>
-
             </div>
         </form>
     </main>
