opções no select PJ

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -57,7 +57,7 @@
 
             <div class="campo">
               <label for="telefone">Telefone</label>
-              <input required id="telefone" type="text" />
+              <input required id="telefone" type="tel" pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}" required />
             </div>
           </div>
           <div class="campo">
