--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -22,7 +22,7 @@
             <select id="dropdown-menu">
                 <option value="sair">Nome</option>
                 <option value="sair">Escolher plano</option>
-                <option value="admin">Editar perfil</option>
+                <option value="admin">Editar Cadastro</option>
                 <option value="sair">Sair</option>
             </select>
         </nav>
