ajustes para diferenciar admin de empresa no login

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -22,7 +22,7 @@
         <div class="login_principal">
 
             <div class="login_conteudo">
-                <div class="login">
+                <form id="form_login" class="login">
                     <img src="../assets/logo3-menor.png" alt="" />
                     <div class="campo_texto">
                         <div class="login_h1">
@@ -37,7 +37,7 @@
                         <a href="#" class="recuperecao_senha">Esqueceu a senha?</a>
                     </div>
                     <button class="btn_secundario" id="submit_login">Entrar</button>
-                </div>
+                </form>
 
                 <div class="login_texto">
                     <div class="campo_texto">
@@ -47,7 +47,7 @@
                     <button class="btn_primario" onclick="window.location.href = './cadastro.html'">Cadastre-se</button>
                 </div>
     </main>
-    <script type="module" src="../script/login.js"></script>
+    <script type="module" src="../script/pages/login.js"></script>
     <footer>&copy caçadores de código 2023</footer>
 </body>
 
