--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - Smart Locker Solutions</title>
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/global.css" />
     <link rel="stylesheet" href="../styles/login.css" />
-</head>
+    <link rel="stylesheet" href="../styles/alert.css" />
+  </head>
 
-<body>
-
+  <body>
     <main id="content">
+      <div class="botao_home_login">
+        <button class="btn_home_login" onclick="window.location.href = './index.html'">Home</button>
+      </div>
 
-        <div class="botao_home_login">
-            <button class="btn_home_login" onclick="window.location.href = './index.html'">Home
-            </button>
+      <div class="login_principal">
+        <div class="login_conteudo">
+          <form id="form_login" class="login">
+            <img src="../assets/logo3-menor.png" alt="" />
+            <div class="campo_texto">
+              <div class="login_h1">
+                <h1>Login</h1>
+              </div>
+              <label for="inputEmail">Usuário</label>
+              <input required type="text" id="inputEmail" nome="usuario" placeholder="Email" />
+            </div>
+            <div class="campo_texto">
+              <label for="inputSenha">Senha</label>
+              <input required type="password" id="inputSenha" nome="senha" placeholder="Senha" />
+              <a href="#" class="recuperecao_senha">Esqueceu a senha?</a>
+            </div>
+            <button class="btn_secundario" id="submit_login">Entrar</button>
+          </form>
+
+          <div class="login_texto">
+            <div class="campo_texto">
+              <h1 class="login_h1">Seja bem-vindo!</h1>
+              <h3 class="login_h3">Faça o seu cadastro e comece agora mesmo</h3>
+            </div>
+            <button class="btn_primario" onclick="window.location.href = './cadastro.html'">Cadastre-se</button>
+          </div>
         </div>
-
-        <div class="login_principal">
-
-            <div class="login_conteudo">
-                <form id="form_login" class="login">
-                    <img src="../assets/logo3-menor.png" alt="" />
-                    <div class="campo_texto">
-                        <div class="login_h1">
-                            <h1>Login</h1>
-                        </div>
-                        <label for="inputEmail">Usuário</label>
-                        <input required type="text" id="inputEmail" nome="usuario" placeholder="Email" />
-                    </div>
-                    <div class="campo_texto">
-                        <label for="inputSenha">Senha</label>
-                        <input required type="password" id="inputSenha" nome="senha" placeholder="Senha" />
-                        <a href="#" class="recuperecao_senha">Esqueceu a senha?</a>
-                    </div>
-                    <button class="btn_secundario" id="submit_login">Entrar</button>
-                </form>
-
-                <div class="login_texto">
-                    <div class="campo_texto">
-                        <h1 class="login_h1">Seja bem-vindo!</h1>
-                        <h3 class="login_h3">Faça o seu cadastro e comece agora mesmo</h3>
-                    </div>
-                    <button class="btn_primario" onclick="window.location.href = './cadastro.html'">Cadastre-se</button>
-                </div>
+      </div>
     </main>
+
+    <div class="container_mensagens">
+      <span id="mensagem_conteudo"></span>
+    </div>
+
     <script type="module" src="../script/pages/login.js"></script>
     <footer>&copy caçadores de código 2023</footer>
-</body>
-
+  </body>
 </html>
