--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/global.css" />
     <link rel="stylesheet" href="../styles/cadastro.css" />
+    <link rel="stylesheet" href="../styles/alert.css" />
   </head>
 
   <body>
@@ -32,8 +33,8 @@
           </div>
           <div class="cadastro_cabecalho_p">
             <p>
-              Para ser cliente é necessário preencher corretamente o formulário
-              abaixo com os respectivos dados cadastrais.
+              Para ser cliente é necessário preencher corretamente o formulário abaixo com os respectivos dados
+              cadastrais.
             </p>
           </div>
         </div>
@@ -71,15 +72,18 @@
           <div class="formulario_acoes">
             <button id="submit_btn" class="btn_primario">Cadastrar</button>
             <p>
-              Ao preencher o formulário a cima você concorda com todos os nossos
-              Termos de Uso e nossa Política de Privacidade.
+              Ao preencher o formulário a cima você concorda com todos os nossos Termos de Uso e nossa Política de
+              Privacidade.
             </p>
           </div>
         </form>
         <!-- </div> -->
       </main>
-      <footer>&copy caçadores de código 2023</footer>
+      <div class="container_mensagens">
+        <span id="mensagem_conteudo"></span>
+      </div>
       <script type="module" src="../script/pages/cadastro.js"></script>
+      <footer>&copy caçadores de código 2023</footer>
     </div>
   </body>
 </html>
