ajuster no html nav

--- a/src/pages/editar-cadastro.html
+++ b/src/pages/editar-cadastro.html
@@ -15,16 +15,13 @@
     <header>
         <div id="logo"><img src="../assets/logo3.png" alt="Logo" /></div>
         <nav id="main_nav">
-            <a href="./index.html">Home</a>
+            <a href="./home.html">Home</a>
             <a href="./produtos.html">Nossos Produtos</a>
             <a href="./sobre.html">Quem Somos</a>
+            <a id="btn_login" class="btn_secundario" href='./login.html'>Login</a>
+            <div id="select_menu">
 
-            <select id="dropdown-menu">
-                <option value="sair">Nome</option>
-                <option value="sair">Escolher plano</option>
-                <option value="admin">Editar Cadastro</option>
-                <option value="sair">Sair</option>
-            </select>
+            </div>
         </nav>
 
 
@@ -77,6 +74,7 @@
         </form>
     </main>
     <footer>&copy caçadores de código 2023</footer>
+    <script type="module" src="../script/pages/editar-cadastro.js"></script>
 
 </body>
 
