--- a/src/pages/escolher-produtos.html
+++ b/src/pages/escolher-produtos.html
@@ -17,13 +17,10 @@
             <a href="./index.html">Home</a>
             <a href="./produtos.html">Nossos Produtos</a>
             <a href="./sobre.html">Quem Somos</a>
-            <button class="btn_secundario">Login</button>
-            <select id="dropdown-menu">
-                <option value="sair">Nome</option>
-                <option value="sair">Escolher plano</option>
-                <option value="admin">Editar Cadastro</option>
-                <option value="sair">Sair</option>
-            </select>
+            <a id="btn_login" class="btn_secundario" href='./login.html'>Login</a>
+            <div id="select_menu">
+
+            </div>
         </nav>
 
     </header>
@@ -58,7 +55,7 @@
     </main>
     <footer>&copy caçadores de código 2023</footer>
 
-
+    <script type="module" src="../script/pages/escolher-produtos.js"></script>
 </body>
 
 </html>
