--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,14 +17,10 @@
             <a href="./produtos.html">Nossos Produtos</a>
             <a href="./sobre.html">Quem Somos</a>
             <a href="./cadastro.html">Cadastre-se</a>
-            <a class="btn_secundario" href='./login.html'>Login</a>
+            <a id="btn_login" class="btn_secundario" href='./login.html'>Login</a>
+            <div id="select_menu">
 
-            <select id="dropdown-menu">
-                <option value="sair">Nome</option>
-                <option value="sair">Escolher plano</option>
-                <option value="admin">Editar Cadastro</option>
-                <option value="sair">Sair</option>
-            </select>
+            </div>
         </nav>
     </header>
 
@@ -77,6 +73,7 @@
     </main>
 
     <footer>&copy caçadores de código 2023</footer>
+    <script type="module" src="../script/pages/index.js"></script>
 </body>
 
 
