--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -14,15 +14,13 @@
     <header>
         <div id="logo"><img src="../assets/logo3.png" alt="Logo" /></div>
         <nav id="main_nav">
-            <a href="./index.html">Home</a>
+            <a href="./index.html">index</a>
             <a href="./produtos.html">Nossos Produtos</a>
             <a href="./cadastro.html">Cadastre-se</a>
-            <a href="./login.html" class="btn_secundario">Login</a>
-            <select id="dropdown-menu">
-                <option value="sair">Nome</option>
-                <option value="admin">Editar perfil</option>
-                <option value="sair">Sair</option>
-            </select>
+            <a id="btn_login" class="btn_secundario" href='./login.html'>Login</a>
+            <div id="select_menu">
+
+            </div>
         </nav>
 
     </header>
@@ -71,7 +69,7 @@
     </main>
 
     <footer>&copy caçadores de código 2023</footer>
-
+    <script type="module" src="../script/pages/sobre.js"></script>
 </body>
 
 </html>
