--- a/src/pages/produtos.html
+++ b/src/pages/produtos.html
@@ -17,12 +17,10 @@
             <a href="./index.html">Home</a>
             <a href="./sobre.html">Quem Somos</a>
             <a href="./cadastro.html">Cadastre-se</a>
-            <a href="./login.html" class="btn_secundario">Login</a>
-            <select id="dropdown-menu">
-                <option value="sair">Nome</option>
-                <option value="admin">Editar perfil</option>
-                <option value="sair">Sair</option>
-            </select>
+            <a id="btn_login" class="btn_secundario" href='./login.html'>Login</a>
+            <div id="select_menu">
+
+            </div>
         </nav>
     </header>
 
@@ -80,7 +78,7 @@
 
     </main>
     <footer>&copy caçadores de código 2023</footer>
-
+    <script type="module" src="../script/pages/produtos.js"></script>
 </body>
 
 </html>
