add area da empresa editar

--- a/src/pages/editar-cadastro.html
+++ b/src/pages/editar-cadastro.html
@@ -67,9 +67,9 @@
                 </div>
             </div>
             <div class="formulario_acoes">
-                <button class="btn_primario">Salvar</button>
-                <button class="btn_terciario">Cancelar plano</button>
-                <button class="btn_quartenario">Excluir conta</button>
+                <button id="btn_salvar" class="btn_primario">Salvar</button>
+                <button id="btn_cancelar" class="btn_terciario">Cancelar plano</button>
+                <button id="btn_excluir" class="btn_quartenario">Excluir conta</button>
             </div>
         </form>
     </main>
