--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -14,7 +14,7 @@
     <header>
         <div id="logo"><img src="../assets/logo3.png" alt="Logo" /></div>
         <nav id="main_nav">
-            <a href="./index.html">index</a>
+            <a href="./index.html">Home</a>
             <a href="./produtos.html">Nossos Produtos</a>
             <a href="./cadastro.html">Cadastre-se</a>
             <a id="btn_login" class="btn_secundario" href='./login.html'>Login</a>
