alert mensagem editar-cadastro

--- a/src/pages/editar-cadastro.html
+++ b/src/pages/editar-cadastro.html
@@ -73,6 +73,9 @@
             </div>
         </form>
     </main>
+    <div class="container_mensagens">
+        <span id="mensagem_conteudo"></span>
+    </div>
     <footer>&copy caçadores de código 2023</footer>
     <script type="module" src="../script/pages/editar-cadastro.js"></script>
 
