--- a/src/pages/escolher-produtos.html
+++ b/src/pages/escolher-produtos.html
@@ -37,7 +37,7 @@
                     <input type="number" id="tamanho_m" name="tamanho m" min="1" max="9" />
                 </div>
                 <div class="campo">
-                    <label for="tamanho_g">Tamanho g</label>
+                    <label for="tamanho_g">Tamanho G</label>
                     <input type="number" id="tamanho_g" name="tamanho g" min="1" max="9" />
                 </div>
             </div>
