--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -54,15 +54,15 @@
         <div id="card_container">
             <div class="card">
                 <img src="../assets/home-users.png" alt="Icone de pessoas" />
-                <p>Personalizar com a sua marca</p>
+                <p>Personalize com a sua marca</p>
             </div>
             <div class="card">
                 <img src="../assets/home-seta.png" alt="Icone seta" />
-                <p>Escolher o tamanho</p>
+                <p>Escolha o tamanho</p>
             </div>
             <div class="card">
                 <img src="../assets/home-monitorar.png" alt="Icone monitor" />
-                <p>Controlar e monitorar através da plataforma</p>
+                <p>Monitore através da plataforma</p>
             </div>
         </div>
 
