--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -36,7 +36,7 @@
             <div class="quemsomos">
                 <h2 class="subtitulo">Quem Somos</h2>
                 <p>A Smart Lokers Solutions é uma empresa especializada em soluções de
-                    armazenamento inteligentes, oferecendo lockers com design moderno,
+                    armazenamento inteligente, oferecendo lockers com design moderno,
                     segurança avançada e conveniência. Com uma equipe dedicada,
                     fornecemos soluções personalizadas para guardar pertences pessoais,
                     documentos importantes ou mercadorias, garantindo uma gestão
@@ -44,19 +44,17 @@
             </div>
             <div class="missao">
                 <h2 class="subtitulo">Nossa Missão</h2>
-                <p>Fornecer lockers seguros e convenientes, facilitando o
-                    armazenamento e retirada de pertences. Garantimos a comodidade e
-                    segurança dos clientes, inovando e expandindo nossa rede de pontos
-                    de armazenamento. Somos a escolha confiável e acessível para
-                    soluções de armazenamento confiáveis.</p>
+                <p>Fornecer lockers seguros, facilitando o armazenamento e retirada de pertences.
+                    Garantimos a comodidade e segurança de nossos clientes, inovando e expandindo
+                    nossa rede de pontos de armazenamento. Somos a escolha confiável e acessível
+                    para a sua empresa.</p>
             </div>
             <div class="visao">
                 <h2 class="subtitulo">Nossa Visão</h2>
-                <p>A empresa de lockers busca tornar a vida dos clientes mais
-                    conveniente e segura, oferecendo espaços de armazenamento acessíveis
-                    e confiáveis. Nossa visão é ser a escolha preferida dos clientes,
-                    proporcionando uma experiência simples e intuitiva, apoiada pela
-                    inovação e excelência no atendimento ao cliente.</p>
+                <p>A Smart Lockers busca tornar a sua vida mais
+                    prática e segura, oferecendo espaços de armazenamento acessíveis
+                    e confiáveis. Nossa visão é proporcionar uma experiência simples e intuitiva,
+                    apoiada pela inovação e excelência no atendimento ao cliente.</p>
             </div>
             <div class="valores">
                 <h2 class="subtitulo" valores>Nossos Valores</h2>
