--- a/src/pages/editar-cadastro.html
+++ b/src/pages/editar-cadastro.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/global.css" />
     <link rel="stylesheet" href="../styles/editar-cadastro.css">
+    <link rel="stylesheet" href="../styles/alert.css" />
 </head>
 
 <body>
